fix spacing

--- a/assets/style.scss
+++ b/assets/style.scss
@@ -12,7 +12,7 @@ body{
     color: #222222;
 }
 #main{
-    padding-top: 15vh;
+    padding-top: 13vh;
 }
 
 #main-photo{
